--- a/scrap_mng_streamlit/pyproject.toml
+++ b/scrap_mng_streamlit/pyproject.toml
@@ -13,6 +13,7 @@ beautifulsoup4 = "^4.12.2"
 pandas = "^2.1.3"
 streamlit-option-menu = "^0.3.6"
 streamlit-timeline = "^0.0.2"
+streamlit-elements = "^0.1.0"
 
 
 [build-system]
