Add Greenpostkorea scraper

--- a/news-scraper/app/common/core/category.yaml
+++ b/news-scraper/app/common/core/category.yaml
@@ -61,6 +61,18 @@ category_dict:
   the bell:
     etc: "200899"
   esg_economy:
+    한국경제: "300101"
+    국제경제: "300102"
+    정책·제도: "300103"
+    환경: "300104"
+    사회책임: "300105"
+    소비자: "300106"
     etc: "300199"
   greenpost_korea:
+    녹색경제: "300201"
+    ESG경영: "300202"
+    ESG금융: "300203"
+    녹색IT: "300204"
+    오피니언: "300205"
+    종합: "300206"
     etc: "300299"
