--- a/news-scraper/pyproject.toml
+++ b/news-scraper/pyproject.toml
@@ -17,6 +17,8 @@ pymysql = "^1.1.0"
 feedparser = "^6.0.10"
 pyyaml = "^6.0.1"
 schedule = "^1.2.1"
+selenium = "^4.15.2"
+pandas = "^2.1.3"
 
 
 [build-system]
