Add esg finance news scraper

--- a/news-scraper/app/common/core/esg_finance_media.yaml
+++ b/news-scraper/app/common/core/esg_finance_media.yaml
@@ -24,7 +24,6 @@ media:
   'www.impacton.net': 'impacton'
   'www.hankooki.com': 'hankooki'
   'sateconomy.co.kr': 'sateconomy'
-  'biz.chosun.com': 'bizchosun'
   'www.dt.co.kr': 'dt'
   'news.heraldcorp.com': 'heraldcorp'
   'www.it-b.co.kr': 'itb'
@@ -40,4 +39,5 @@ media:
   'www.koit.co.kr': 'koit'
   'theviewers.co.kr': 'theviewers'
   'digitalchosun.dizzo.com': 'digitalchosun'
-  'kr.news.cn': 'krnewscn'
+  # 'kr.news.cn': 'krnewscn'
+  # 'biz.chosun.com': 'bizchosun'
