Add esg finance news scraper

--- a/news-scraper/app/common/core/esg_finance_media.yaml
+++ b/news-scraper/app/common/core/esg_finance_media.yaml
@@ -39,5 +39,10 @@ media:
   'www.koit.co.kr': 'koit'
   'theviewers.co.kr': 'theviewers'
   'digitalchosun.dizzo.com': 'digitalchosun'
+  
+  'www.etoday.co.kr': 'etoday'
+  'www.newsian.co.kr': 'newsian'
+  'www.wolyo.co.kr': 'wolyo'
+
   # 'kr.news.cn': 'krnewscn'
   # 'biz.chosun.com': 'bizchosun'
