--- a/news-scraper/app/common/core/esg_finance_media.yaml
+++ b/news-scraper/app/common/core/esg_finance_media.yaml
@@ -17,10 +17,10 @@ media:
   # www.insnews.co.kr: insnews
   # www.ikld.kr: ikld
   # www.korea.kr: korea
+  # www.hankyung.com: hankyung
   news.naver.com: naver
   n.news.naver.com: naver
   www.impacton.net: impacton
-  www.hankyung.com: hankyung
   www.greened.kr: greened
   www.esgeconomy.com: esg_economy
   www.sedaily.com: sedaily
