--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   scrap_mng_streamlit:
-    build: ./scrap_mng_streamlit
+    build: ./ai_scrap_mng_streamlit
     restart: unless-stopped # 컨테이너가 종료되지 않는 한 항상 재시작
     ports:
       - "8501:8080"  # 포트 변경
@@ -11,7 +11,7 @@ services:
     command: streamlit run run.py --server.port 8080 --server.address 0.0.0.0
 
   news_scraper:
-    build: ./news-scraper
+    build: ./ai_news-scraper
     restart: unless-stopped # 컨테이너가 종료되지 않는 한 항상 재시작
     ports:
       - "8500:8080"  # 포트 변경
