--- a/ai_dart_scraper/pyproject.toml
+++ b/ai_dart_scraper/pyproject.toml
@@ -9,10 +9,13 @@ readme = "README.md"
 python = "^3.10"
 fastapi = "^0.105.0"
 pandas = "^2.1.4"
-opendartreader = "^0.2.3"
 sqlalchemy = "^2.0.23"
 python-dotenv = "^1.0.0"
 pymysql = "^1.1.0"
+uvicorn = "^0.24.0.post1"
+aiohttp = "^3.9.1"
+xmltodict = "^0.13.0"
+requests = "^2.31.0"
 
 
 [build-system]
