--- a/ai_news_scraper/app/common/core/category.yaml
+++ b/ai_news_scraper/app/common/core/category.yaml
@@ -11,7 +11,7 @@ categories:
     - "foreign"
     - "digital"
   esg_economy:
-    - "econony"
+    - "economy"
     - "social_and_env"
 
 category_dict:
