--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,16 @@
 version: '3.3'
 
 services:
+  ai_auth_server:
+    build: ./ai_auth_server
+    image: auth_server:1.0.0
+    restart: unless-stopped # 컨테이너가 종료되지 않는 한 항상 재시작
+    ports:
+      - "8499:8000"
+    env_file:
+      - ./ai_auth_server/.env
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --workers 1
+
   ai_scrap_mng_streamlit:
     build: ./ai_scrap_mng_streamlit
     image: ai_scrap_mng_streamlit:1.0.0
