--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "8499:8000"
     env_file:
-      - ./auth_server/.env
+      - ./ai_auth_server/.env
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --workers 1
 
   ai_scrap_mng_streamlit:
