--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -40,3 +40,13 @@ services:
     env_file:
       - ./ai_dart_scraper/.env
     command: uvicorn app.main:app --host 0.0.0.0 --port 8080 --workers 1
+
+  ai_venture_scraper:
+    build: ./ai_venture_scraper
+    image: ai_venture_scraper:1.0.0
+    restart: unless-stopped # 컨테이너가 종료되지 않는 한 항상 재시작
+    ports:
+      - "8503:8080"  # 포트 변경
+    env_file:
+      - ./ai_venture_scraper/.env
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8080 --workers 1
