--- a/ai_venture_scraper/pyproject.toml
+++ b/ai_venture_scraper/pyproject.toml
@@ -16,6 +16,8 @@ requests = "^2.31.0"
 aiohttp = "^3.9.1"
 fastapi = "^0.108.0"
 pandas = "^2.1.4"
+pyjwt = "^2.8.0"
+apscheduler = "^3.10.4"
 
 
 [build-system]
