--- a/ai_venture_scraper/pyproject.toml
+++ b/ai_venture_scraper/pyproject.toml
@@ -9,15 +9,14 @@ readme = "README.md"
 python = "^3.10"
 python-dotenv = "^1.0.0"
 selenium = "^4.16.0"
-pillow = "^10.2.0"
 sqlalchemy = "^2.0.25"
 pymysql = "^1.1.0"
 requests = "^2.31.0"
-aiohttp = "^3.9.1"
 fastapi = "^0.108.0"
 pandas = "^2.1.4"
 pyjwt = "^2.8.0"
 apscheduler = "^3.10.4"
+uvicorn = "^0.25.0"
 
 
 [build-system]
