update: type of field

--- a/ai_auth_server/dockerfile
+++ b/ai_auth_server/dockerfile
@@ -13,6 +13,8 @@ WORKDIR /usr/src/app
 # 시스템 패키지 업데이트 및 필요한 패키지 설치
 RUN apt update -y && apt upgrade -y
 
+RUN apt-get install -y curl
+
 # Poetry 설치
 RUN pip install poetry==1.7.1
 
@@ -25,11 +27,15 @@ COPY pyproject.toml poetry.lock ./
 # Poetry를 사용하여 의존성 설치
 RUN poetry install --only main
 
+# 헬스체크 명령 추가
+HEALTHCHECK --interval=5m --timeout=30s \
+    CMD curl -f http://localhost:8000/health || exit 1
+
 # 애플리케이션 코드 복사
 COPY . .
 
 # 애플리케이션 포트 노출
-EXPOSE 8080
+EXPOSE 8000
 
 # 애플리케이션 실행
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080", "--workers", "1"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "1"]
