--- a/ai_dart_scraper/dockerfile
+++ b/ai_dart_scraper/dockerfile
@@ -13,6 +13,8 @@ WORKDIR /usr/src/app
 # 시스템 패키지 업데이트 및 필요한 패키지 설치
 RUN apt update -y && apt upgrade -y
 
+RUN apt-get install -y curl
+
 # Poetry 설치
 RUN pip install poetry==1.7.1
 
