update vntr scraper threadpoolexecutor

--- a/ai_venture_scraper/Dockerfile
+++ b/ai_venture_scraper/Dockerfile
@@ -12,15 +12,13 @@ WORKDIR /usr/src/app
 
 # 패키지 업데이트 및 필요한 도구 설치
 RUN apt update -y && apt upgrade -y && \
-    # 크롬 브라우저 설치를 위한 필요 패키지
-    apt install -y wget gnupg2 && \
-    # 크롬 브라우저 저장소 추가
-    wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add - && \
-    sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list' && \
-    apt update -y && \
+    apt-get install -y curl unzip && \
     # 크롬 브라우저 설치
-    apt install -y google-chrome-stable && \
-    apt-get install -y curl
+    apt-get install -y wget gnupg2 && \
+    wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && \
+    echo "deb https://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list && \
+    apt-get update -y && \
+    apt-get install -y google-chrome-stable
 
 # Poetry 설치
 RUN pip install poetry==1.7.1
@@ -44,8 +42,5 @@ HEALTHCHECK --interval=5m --timeout=30s \
 # 포트 설정
 EXPOSE 8080
 
-# 크롬 드라이버 권한 설정
-RUN chmod +x app/config/chromedriver
-
 # 서버 실행
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080", "--workers", "1"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080"]
