--- a/ai_news_scraper/pyproject.toml
+++ b/ai_news_scraper/pyproject.toml
@@ -15,12 +15,13 @@ uvicorn = "^0.24.0.post1"
 aiohttp = "^3.9.0"
 pymysql = "^1.1.0"
 feedparser = "^6.0.10"
-pyyaml = "^6.0.1"
+pyyaml = "5.1.2"
 schedule = "^1.2.1"
 selenium = "^4.15.2"
 pandas = "^2.1.3"
 trafilatura = "^1.6.3"
 python-dotenv = "^1.0.0"
+hanja = "^0.13.3"
 
 
 [build-system]
