update: vntr scraper 셀리니움 좀비 프로세스 버그 수정

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -50,3 +50,71 @@ services:
     env_file:
       - ./ai_venture_scraper/.env
     command: uvicorn app.main:app --host 0.0.0.0 --port 8080
+    shm_size: 2gb
+
+  selenium-hub:
+    image: selenium/hub:latest
+    ports:
+      - 4442:4442
+      - 4443:4443
+      - 4444:4444
+    environment:
+      GRID_MAX_SESSION: 4
+    security_opt:
+      - seccomp:unconfined
+
+  chrome-node_1:
+    image: selenium/node-chrome:latest
+    depends_on:
+      - selenium-hub
+    environment:
+      SE_EVENT_BUS_HOST: selenium-hub
+      SE_EVENT_BUS_PUBLISH_PORT: 4442
+      SE_EVENT_BUS_SUBSCRIBE_PORT: 4443
+      SE_NODE_MAX_SESSIONS: 1
+      selenium-manager: 'true'
+    security_opt:
+      - seccomp:unconfined
+    shm_size: 2gb
+
+  chrome-node_2:
+    image: selenium/node-chrome:latest
+    depends_on:
+      - selenium-hub
+    environment:
+      SE_EVENT_BUS_HOST: selenium-hub
+      SE_EVENT_BUS_PUBLISH_PORT: 4442
+      SE_EVENT_BUS_SUBSCRIBE_PORT: 4443
+      SE_NODE_MAX_SESSIONS: 1
+      selenium-manager: 'true'
+    security_opt:
+      - seccomp:unconfined
+    shm_size: 2gb
+
+  chrome-node_3:
+    image: selenium/node-chrome:latest
+    depends_on:
+      - selenium-hub
+    environment:
+      SE_EVENT_BUS_HOST: selenium-hub
+      SE_EVENT_BUS_PUBLISH_PORT: 4442
+      SE_EVENT_BUS_SUBSCRIBE_PORT: 4443
+      SE_NODE_MAX_SESSIONS: 1
+      selenium-manager: 'true'
+    security_opt:
+      - seccomp:unconfined
+    shm_size: 2gb
+
+  chrome-node_4:
+    image: selenium/node-chrome:latest
+    depends_on:
+      - selenium-hub
+    environment:
+      SE_EVENT_BUS_HOST: selenium-hub
+      SE_EVENT_BUS_PUBLISH_PORT: 4442
+      SE_EVENT_BUS_SUBSCRIBE_PORT: 4443
+      SE_NODE_MAX_SESSIONS: 1
+      selenium-manager: 'true'
+    security_opt:
+      - seccomp:unconfined
+    shm_size: 2gb
