--- a/ai_ocr/pyproject.toml
+++ b/ai_ocr/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "ai-venture-scraper"
+name = "ai-ocr"
 version = "0.1.0"
 description = ""
 authors = ["Ruo Lee <ruo@illunex.com>"]
@@ -7,18 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-python-dotenv = "^1.0.0"
-selenium = "^4.16.0"
-sqlalchemy = "^2.0.25"
-pymysql = "^1.1.0"
-requests = "^2.31.0"
-fastapi = "^0.108.0"
-pandas = "^2.1.4"
-pyjwt = "^2.8.0"
-apscheduler = "^3.10.4"
-uvicorn = "^0.25.0"
+transformers = "^4.37.1"
+torch = "^2.1.2"
 pillow = "^10.2.0"
-schedule = "^1.2.1"
+fastapi = "^0.109.0"
+uvicorn = "^0.27.0"
+python-multipart = "^0.0.6"
 
 
 [build-system]
