--- a/ai_scrap_mng_streamlit/Dockerfile
+++ b/ai_scrap_mng_streamlit/Dockerfile
@@ -10,13 +10,22 @@ COPY requirements.txt pyproject.toml poetry.lock /usr/src/
 
 WORKDIR /usr/src
 
-RUN apt update -y && apt upgrade -y && \
-    pip install -r requirements.txt && \
-    poetry config virtualenvs.create false && \
-    if [ -f pyproject.toml ]; then poetry install; fi
+RUN apt update -y && apt upgrade -y
 
-COPY . /usr/src/app
-WORKDIR /usr/src/app/
+# Poetry 설치
+RUN pip install poetry==1.7.1
+
+# Poetry 가상 환경 생성 비활성화
+RUN poetry config virtualenvs.create false
+
+# `pyproject.toml`과 `poetry.lock` 파일을 컨테이너에 복사
+COPY pyproject.toml poetry.lock ./
+
+# Poetry를 사용하여 의존성 설치
+RUN poetry install --only main
+
+# 애플리케이션 코드 복사
+COPY . .
 
 EXPOSE 8080
 
